# glslim

./: .gitignore  CMakeLists.txt  LICENSE  README  build.sh
BCLSlib/: bccgls.h  bcls.h  bcsolver.h  bctimer.h  bcversion.h  libbcls.la  libcblas.la
GKlib/: CMakeLists.txt  GKlibSystem.cmake  Makefile  csr.c  error.c  gk_defs.h  gk_mkpqueue.h  gk_proto.h  gk_struct.h  graph.c  io.c  itemsets.c  memory.c  omp.c  random.c  sort.c  string.c
GKlib/test/: CMakeLists.txt  csrcnv.c  gkgraph.c  m2mnbrs.c  rw.c
bcls-0.1/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.common  Makefile.in  README  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
bcls-0.1/autom4te.cache/: output.0  requests  traces.0
bcls-0.1/config/: acx_matlab.m4
bcls-0.1/doc/: Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  license-stub.txt  versionfilter.sh
bcls-0.1/doc/local/: autoconf_install.doc  bcls_footer.html  bcls_header.html  index.doc  installation.doc.in
bcls-0.1/examples/: Makefile  Makefile.am  Makefile.in  bcsol  bcsol.c  dm2hb.m  iohb.c  iohb.h  mat2hb.m  mat2hbmex.c  savehb.m  well1033.bnd  well1033.rra
bcls-0.1/examples/.deps/: bcsol.Po  cs_malloc.Po  cs_util.Po  iohb.Po
bcls-0.1/examples/.libs/: bcsol
bcls-0.1/include/: bclib.h  bclsqr.h
bcls-0.1/matlab/: Makefile  Makefile.am  Makefile.in  aprod.m  bcls.m  bclsmex.c  cblas.c  foo.c  test.m  usolve.m  well1033.mat
bcls-0.1/src/: Makefile  Makefile.am  Makefile.in  bccblas.lo  bccgls.c  bccgls.lo  bcdebug.c  bclib.c  bclib.lo  bcls.c  bcls.lo  bclsqr.c  bclsqr.lo  bcsolver.c  bcsolver.lo  bctimer.c  bctimer.lo  bcversion.c  bcversion.lo  lsqr.c  lsqr.lo
bcls-0.1/src/.deps/: bccblas.Plo  bccgls.Plo  bclib.Plo  bcls.Plo  bclsqr.Plo  bcsolver.Plo  bctimer.Plo  bcversion.Plo  lsqr.Plo
bcls-0.1/src/.libs/: libbcls.1.0.0.dylib  libbcls.1.dylib  libbcls.la  libbcls.lai  libcblas.1.0.0.dylib  libcblas.1.dylib  libcblas.la  libcblas.lai
example_files/: gu_v0  participation_v0  test_1
include/: CMakeLists.txt  def.h  proto.h  slim.h  struct.h
src/: CMakeLists.txt  bcsol.c  cmd.c  gu_learn.c  learn.c  lslim_learn.c  lslim_participation_learn.c  lslim_predict.c  main_create_gu.c  main_glslim.c  main_glslimr0.c  main_lslim.c  norm.c  participation_learn.c  predict.c  util.c
