INCLUDE_DIRECTORIES(${SLIM_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${BCLSLIB_PATH} ${GKLIB_PATH})
INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(SLIM_SOURCES bcsol.c cmd.c predict.c util.c learn.c gu_learn.c 
participation_learn.c norm.c lslim_predict.c lslim_participation_learn.c 
lslim_learn.c )

LINK_LIBRARIES(${BCLSLIB_PATH}/libbcls.a)
file(GLOB GKLIB_SOURCES ${GKLIB_PATH}/csr.c ${GKLIB_PATH}/error.c 
${GKLIB_PATH}/memory.c ${GKLIB_PATH}/timers.c ${GKLIB_PATH}/string.c 
${GKLIB_PATH}/gk_util.c ${GKLIB_PATH}/io.c ${GKLIB_PATH}/fs.c 
${GKLIB_PATH}/mcore.c ${GKLIB_PATH}/blas.c ${GKLIB_PATH}/sort.c 
${GKLIB_PATH}/getopt.c ${GKLIB_PATH}/fkvkselect.c)

LINK_LIBRARIES(m gsl gslcblas) 

ADD_LIBRARY(SLIM ${SLIM_SOURCES} ${GKLIB_SOURCES})

INSTALL(TARGETS SLIM 
	LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
	RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/lib 
	ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)	

ADD_EXECUTABLE(glslim main_glslim)
ADD_EXECUTABLE(glslimr0 main_glslimr0)
ADD_EXECUTABLE(create_gu main_create_gu)				 
ADD_EXECUTABLE(lslim main_lslim)

TARGET_LINK_LIBRARIES(lslim SLIM)
TARGET_LINK_LIBRARIES(lslim ${MPI_LIBRARIES})
TARGET_LINK_LIBRARIES(create_gu SLIM)
TARGET_LINK_LIBRARIES(create_gu ${MPI_LIBRARIES})
TARGET_LINK_LIBRARIES(glslim SLIM)
TARGET_LINK_LIBRARIES(glslim ${MPI_LIBRARIES})
TARGET_LINK_LIBRARIES(glslimr0 SLIM)
TARGET_LINK_LIBRARIES(glslimr0 ${MPI_LIBRARIES})

